<resources>
    <string name="language_english">English</string>
    <string name="language_Arabic">العربية</string>
    <string name="language_German">Deutsch</string>
    <string name="language_Spanish">Español</string>
    <string name="language_French">Français</string>
    <string name="language_Indonesian">Bahasa Indonesia</string>
    <string name="language_Italian">Italiano</string>
    <string name="language_Norwegian">Norsk</string>
    <string name="language_Russian">Русский</string>
    <string name="language_Turkish">Türkçe</string>
    <string name="language_Ukrainian">Українська</string>
    <string name="language_Chinese">中文</string>
    <string name="language_Taiwanese">中文（繁體）</string>
    <string name="facebook_app_id">266286379591311</string>
    <string name="fb_login_protocol_scheme">fb266286379591311</string>
    <string name="facebook_client_token">c707fb6a5daadbedbb4b1cb77b566de0</string>
    <string name="unita_vpn">Unita VPN</string>
    <string name="plus_x_minutes">+%d min</string>
    <string name="dashboard_connect">Connect</string>
    <string name="premium">Premium</string>
    <string name="upgrade_service">Upgrade</string>
    <string name="ping">Ping</string>
    <string name="preferences">Preferences</string>
    <string name="general">General</string>
    <string name="service_activated_successfully">Service %s Activated Successfully</string>
    <string name="service_name_placeholder">Select a Service</string>
    <string name="service_name">%s (%s)</string>
    <string name="account">Account</string>
    <string name="comment">Comment</string>
    <string name="unita_vpn_telegram">Telegram</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="need_reload">Reload proxy service to apply changes</string>
    <string name="ultra_fast_connection_speed">Ultra-fast connection speed</string>
    <string name="access_to_premium_virtual_locations">Access to premium virtual locations</string>
    <string name="ad_free_experience">Ad-free experience</string>
    <string name="no_time_limit">No time limit</string>
    <string name="thirty_days">30 Days</string>
    <string name="ninety_days">90 Days</string>
    <string name="one_hundred_and_eighty_days">180 Days</string>
    <string name="three_hundred_and_sixty_five_days">365 Days</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying…</string>
    <string name="verify_code">Verify Code:</string>
    <string name="enter_your_verify_code">Enter Your Verify Code</string>
    <string name="resend_verify_code">Resend Verify Code</string>
    <string name="resending_verify_code">Resending Verify Code…</string>
    <string name="pay">PAY</string>
    <string name="register">Register</string>
    <string name="Registering">Registering…</string>
    <string name="Checking">Checking…</string>
    <string name="update_now">Update Now</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password_">Password:</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="already_have_account_login">Already have account? login</string>
    <string name="or_register_with">Or Register With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="Logging_in">Logging in…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_signup">New User? Signup</string>
    <string name="or_login_with">Or Login With</string>
    <string name="welcome">Welcome\nto</string>
    <string name="welcome_title">A unique experience of\nspeed and security</string>
    <string name="info">Info</string>
    <string name="plan">Plan</string>
    <string name="expiration_date">Expiration date</string>
    <string name="dataleft">Data Left: %s</string>
    <string name="title">Title</string>
    <string name="enter_your_title">Enter your title</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="send">Send</string>
    <string name="exit_account">Exit Account</string>
    <string name="get_more_data">Get more data</string>
    <string name="connect_state">Connect</string>
    <string name="connected_state">Connected</string>
    <string name="connecting_state">Connecting…</string>
    <string name="try_again">Try Again</string>
    <string name="enter_email_and_password">Please enter email and password.</string>
    <string name="something_is_wrong">Something is wrong!</string>
    <string name="email_or_password_is_wrong">Email or Password is wrong!</string>
    <string name="verify_code_is_wrong">Verify Code is wrong!</string>
    <string name="email_already_registered">This Email is already registered</string>
    <string name="app_name" translatable="false">UnitaVPN</string>
    <string name="app_desc">Browse Privately,Access Globally</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription link</string>
    <string name="group_create">Create group</string>
    <string name="group_edit">Edit group</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No change</string>
    <string name="group_updated">%s: Updated %d proxies</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn">VPN</string>
    <string name="port_proxy">SOCKS5 proxy port</string>
    <string name="port_http">HTTP proxy port</string>
    <string name="port_transproxy">Transparent proxy port</string>
    <string name="cag_route">Route settings</string>
    <string name="allow_access">Allow connections from LAN</string>
    <string name="allow_access_sum">Bind inbounds to 0.0.0.0</string>
    <string name="inbound_settings">Inbound settings</string>
    <string name="general_settings">App settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket settings</string>
    <string name="ws_max_early_data">Max early data</string>
    <string name="ws_browser_forwarding">Browser forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward WebSocket through browser</string>
    <string name="speed_interval">Speed notification update interval</string>
    <string name="cag_misc">Misc settings</string>
    <string name="show_direct_speed">Show direct speed</string>
    <string name="show_direct_speed_sum">Show direct traffic speed in notification as well</string>
    <string name="security_settings">Security settings</string>
    <string name="allow_insecure">Allow insecure</string>
    <string name="allow_insecure_sum">Disable certificate validation. When enabled the security of this configuration is equivalent to cleartext.</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy: %1$s↑ %2$s↓
\nDirect: %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %d ms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %d ms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="cag_dns">DNS settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of potential DNS leaks.</string>
    <string name="enable_fakedns">Enable fake DNS</string>
    <string name="fakedns_message">May cause other applications to need to be restarted to reconnect to the network after the proxy is disconnected</string>
    <string name="hijack_dns">Hijack DNS</string>
    <string name="hijack_dns_message">Hijack DNS in TUN instead of using DNS sniffer</string>
    <string name="dns_hosts">Domain rewriting</string>
    <string name="port_local_dns">Local DNS port</string>
    <string name="require_transproxy">Enable transparent proxy inbound</string>
    <string name="transproxy_mode">Transparent proxy mode</string>
    <string name="connection_test_url">Connection test URL</string>
    <string name="probe_url">Custom test URL</string>
    <string name="profile_name">Profile name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Server port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enc_method">Encryption method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol parameters</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs parameters</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer security</string>
    <string name="network">Network</string>
    <string name="flow">Flow</string>
    <string name="header_type">Obfuscation header type</string>
    <string name="ws_host">WebSocket host</string>
    <string name="ws_path">WebSocket path</string>
    <string name="http_host">HTTP host</string>
    <string name="http_path">HTTP path</string>
    <string name="quic_security">QUIC Security</string>
    <string name="quic_key">Quic key</string>
    <string name="kcp_seed">mKCP seed</string>
    <string name="grpc_service_name">gRPC service name</string>
    <string name="url">URL</string>
    <string name="sni">SNI</string>
    <string name="alpn">ALPN</string>
    <string name="certificates">Certificate</string>
    <string name="pinned_peer_certificate_chain_sha256">Pinned certificate chain hash</string>
    <string name="early_data_header_name">Early data header name</string>
    <string name="extra_headers">Extra headers</string>
    <string name="config_type">Config type</string>
    <string name="edit_config">Edit Config</string>
    <string name="ipv6">IPv6 route</string>
    <string name="prefer">Prefer</string>
    <string name="only">Only</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
</resources>